Documentación para el controlador  UserController, Logs y mejoras (#3)
* Pagos

* Documentacion para usersController y test unitarios

* Documentacion para el controlador UserController

* Documentacion del controlador

* corrijo mensaje de daots invalidos de login

* correcion de valores de machine